<resources>
    <string name="app_name">实验帮 </string>
    <string name="title_activity_details">DetailsActivity</string>

    <string name="action_share">Share</string>
    <string name="section_1">Section 1</string>
    <string name="some_informations">Some informations...</string>
    <string name="section_2">Section 2</string>
   <string name="exit">退出登录</string>
     <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

   <string name="equipID">设备ID</string>
   <string name="equipName">设置名称</string>
   <string name="laboratory">实验室</string>
   <string name="way">方法</string>
   <string name="option">功能</string>
   <string name="firm">厂商</string>
   <string name="equipDescribe">设备描述</string>
   <string name="producingArea">产地</string>
   <string name="species">类别</string>
   <string name="buyDate">购置日期</string>

   <string name="laboratoryID">ID</string>
   <string name="laboratoryName">名称</string>
   <string name="laboratoryUnit">单位</string>
   <string name="principal">负责人</string>
   <string name="equip_amount">设备数</string>
   <string name="condition">状态</string>
   <string name="contain">容量</string>
   <string name="location">位置</string>
   <string name="briefing">简介</string>

   <string name="userId">用户ID</string>
   <string name="name">姓名</string>
   <string name="commission">权限</string>
   <string name="Unit">单位</string>
   <string name="sex">性别</string>
   <string name="email">邮箱</string>
   <string name="birthday">生日</string>
   <string name="phone">电话</string>
   <string name="CardId">身份证</string>
   <string name="office">职称</string>
   <string name="inspect">审核</string>

   <string name="insertEquip">录入设备</string>
   <string name="serchEquip">搜索设备</string>
   <string name="appointment">预约</string>
   <string name="insertLaboratory">录入实验室</string>
   <string name="serchUser">用户搜索</string>
   <string name="serchAppoint">查询预约</string>
   <string name="serchLaboratory">搜索实验室</string>
   <string name="unusual">异常处理</string>
   <string name="news">资讯</string>
   <string name="persion">个人中心</string>

   <string name="experimentalUse">实验用途</string>
   <string name="experimentContent">实验内容</string>
   <string name="remarks">备注</string>
   <string name="commit">提交</string>
</resources>
