<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
   >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView

                style="@style/sertuserTextView"
                android:text="@string/equipID" />

            <TextView
                android:id="@+id/person_tveEquipID"

                style="@style/TextViweStyle"
                android:text="111111111111"
            />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black_lint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                style="@style/sertuserTextView"
                android:text="@string/equipName" />

            <TextView
                android:id="@+id/person_tveEquipName"

                style="@style/TextViweStyle"
                android:text="111111111111" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black_lint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                style="@style/sertuserTextView"
                android:text="@string/laboratory" />

            <TextView
                android:id="@+id/person_tvLaboratory"

                style="@style/TextViweStyle"
                android:text="111111111111"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black_lint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">

            <TextView
                style="@style/sertuserTextView"
                android:text="@string/way" />

            <TextView
                android:id="@+id/person_tvWay"
                android:text="111111111111"
                style="@style/TextViweStyle"
                />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black_lint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">

            <TextView
                style="@style/sertuserTextView"
                android:text="@string/option" />

            <TextView
                android:id="@+id/person_tvOption"
                android:text="111111111111"
                style="@style/TextViweStyle" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black_lint" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                style="@style/sertuserTextView"
                android:text="@string/firm" />

            <TextView
                android:id="@+id/person_tvFirm"
                android:text="111111111111"
                style="@style/TextViweStyle" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black_lint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                style="@style/sertuserTextView"
                android:text="@string/equipDescribe" />

            <TextView
                android:id="@+id/person_tvEquipDescribe"
                android:text="111111111111"
                style="@style/TextViweStyle" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black_lint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                style="@style/sertuserTextView"
                android:text="@string/species" />

            <TextView
                android:id="@+id/person_tvSpecies"
                android:text="111111111111"
                style="@style/TextViweStyle" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black_lint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                style="@style/sertuserTextView"
                android:text="@string/producingArea" />

            <TextView
                android:id="@+id/person_tvProducingArea"
                android:text="111111111111"
                style="@style/TextViweStyle" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black_lint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView

                style="@style/sertuserTextView"
                android:text="@string/buyDate" />

            <TextView
                android:id="@+id/person_tvBuyDate"
                android:text="111111111111"
                style="@style/TextViweStyle" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black_lint" />
    </LinearLayout>


</android.support.v4.widget.NestedScrollView>